--- a/example/package.json
+++ b/example/package.json
@@ -23,27 +23,26 @@
     "actor-sdk": "../",
     "babel-polyfill": "^6.2.0",
     "bugsnag-js": "^2.4.8",
-    "classnames": "2.2.0",
-    "crosstab": "0.2.11",
+    "classnames": "2.2.1",
+    "crosstab": "0.2.12",
     "emoji-data": "github:olegshilov/emoji-data.git#develop",
     "flexboxgrid": "6.3.0",
     "flux": "2.1.1",
-    "highlight.js": "8.9.1",
     "immutable": "3.7.5",
-    "intl": "1.0.0",
+    "intl": "1.0.1",
     "js-emoji": "github:olegshilov/js-emoji#develop",
     "jsonlylightbox": "github:olegshilov/jsOnlyLightbox.git#develop",
     "keymirror": "0.1.1",
     "lodash": "3.10.1",
     "material-ui": "github:olegshilov/material-ui.git#develop",
     "memoizee": "0.3.9",
-    "mixpanel-browser": "github:mixpanel/mixpanel-js",
+    "mixpanel-browser": "2.7.2",
     "normalize.css": "3.0.3",
     "object-assign": "4.0.1",
     "pace": "github:hubspot/pace",
     "react": "0.13.3",
-    "react-intl": "1.2.0",
-    "react-mixin": "3.0.0",
+    "react-intl": "1.2.2",
+    "react-mixin": "3.0.3",
     "react-modal": "0.3.0",
     "react-router": "0.13.3",
     "react-scroll": "github:olegshilov/react-scroll.git#f690add1cd1367e5483074d5a2dcddd3892f28fe",
@@ -58,23 +57,23 @@
     "babel-preset-react": "^6.2.4",
     "babel-preset-stage-0": "^6.2.4",
     "css-loader": "^0.23.0",
-    "eslint": "^1.5.0",
-    "eslint-loader": "^1.0.0",
-    "eslint-plugin-react": "^3.4.2",
-    "file-loader": "^0.8.4",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.11.3",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.0",
     "gulp-if": "^2.0.0",
     "gulp-image": "^1.1.1",
     "gulp-util": "^3.0.6",
-    "json-loader": "^0.5.3",
+    "json-loader": "^0.5.4",
     "minimist": "^1.1.3",
     "node-sass": "^3.3.3",
     "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.0.0",
+    "sass-loader": "^3.1.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.6",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1"
   }
 }
