--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "actor-sdk",
-  "version": "1.0.23",
+  "version": "1.0.34",
   "description": "Actor SDK for building messaging web apps on top of Actor platform",
   "homepage": "https://actor.im/",
   "license": "Apache-2.0",
@@ -50,26 +50,26 @@
     "actor-js": "1.0.53",
     "babel-polyfill": "^6.2.0",
     "bugsnag-js": "^2.4.8",
-    "classnames": "2.2.0",
-    "crosstab": "0.2.11",
+    "classnames": "2.2.1",
+    "crosstab": "0.2.12",
     "emoji-data": "github:olegshilov/emoji-data.git#develop",
     "flexboxgrid": "6.3.0",
     "flux": "2.1.1",
     "immutable": "3.7.5",
-    "intl": "1.0.0",
+    "intl": "1.0.1",
     "js-emoji": "github:olegshilov/js-emoji#develop",
     "jsonlylightbox": "github:olegshilov/jsOnlyLightbox.git#develop",
     "keymirror": "0.1.1",
     "lodash": "3.10.1",
     "material-ui": "github:olegshilov/material-ui.git#develop",
     "memoizee": "0.3.9",
-    "mixpanel-browser": "github:mixpanel/mixpanel-js",
+    "mixpanel-browser": "2.7.2",
     "normalize.css": "3.0.3",
     "object-assign": "4.0.1",
     "pace": "github:hubspot/pace",
     "react": "0.13.3",
-    "react-intl": "1.2.0",
-    "react-mixin": "3.0.0",
+    "react-intl": "1.2.2",
+    "react-mixin": "3.0.3",
     "react-modal": "0.3.0",
     "react-router": "0.13.3",
     "react-scroll": "github:olegshilov/react-scroll.git#f690add1cd1367e5483074d5a2dcddd3892f28fe",
@@ -88,8 +88,9 @@
     "css-loader": "^0.23.0",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.2",
+    "eslint-plugin-react": "^3.11.3",
     "file-loader": "^0.8.5",
+    "gulp-sass": "^2.1.0",
     "json-loader": "^0.5.4",
     "node-sass": "^3.3.3",
     "react-hot-loader": "^1.3.0",
