--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "actor-sdk",
-  "version": "1.0.38",
+  "version": "1.0.39",
   "description": "Actor SDK for building messaging web apps on top of Actor platform",
   "homepage": "https://actor.im/",
   "license": "Apache-2.0",
@@ -48,6 +48,7 @@
   ],
   "dependencies": {
     "actor-js": "1.0.53",
+    "assign-deep": "0.4.2",
     "babel-polyfill": "^6.2.0",
     "bugsnag-js": "^2.4.8",
     "classnames": "2.2.1",
@@ -90,9 +91,8 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.11.3",
     "file-loader": "^0.8.5",
-    "gulp-sass": "^2.1.0",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.3.3",
     "react-hot-loader": "^1.3.0",
     "rimraf": "^2.4.4",
     "sass-loader": "^3.1.2",
