--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "actor-sdk",
-  "version": "1.0.54",
+  "version": "1.0.55",
   "description": "Actor SDK for building messaging web apps on top of Actor platform",
   "homepage": "https://actor.im/",
   "license": "Apache-2.0",
@@ -47,7 +47,7 @@
     "publish"
   ],
   "dependencies": {
-    "actor-js": "1.0.53",
+    "actor-js": "latest",
     "assign-deep": "0.4.2",
     "babel-polyfill": "^6.2.0",
     "bugsnag-js": "^2.4.8",
